<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
        >
        
        <ImageView 
            android:id="@+id/login_img"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
  			android:src="@drawable/logo1"
  			android:contentDescription="@string/logo"
  			android:layout_marginBottom="20dp"
            />
              
        <EditText 
            android:id="@+id/login_et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginBottom="10dp"
            />  

            
        <EditText 
            android:id="@+id/login_et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            />  
            
        <Button 
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="loginMe"
            />
        
    </LinearLayout>

</RelativeLayout>